--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_PUBLIC_TOKEN_MARVEL=ceae98e15eff405de9357238efc38e3e
-VITE_PRIVATE_TOKEN_MARVEL=b0e48472da5ff2cdcbb9d517715a8e498991c3ab
+VITE_BASE_URL=http://gateway.marvel.com/v1/public
+VITE_PUBLIC_TOKEN_MARVEL=597047c899feefeca0d65802fd229216
+VITE_PRIVATE_TOKEN_MARVEL=1b2fc5d0933ad06019e68c3a92b8f25f33e6aa64
