--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.71.1",
-    "typescript": "^5.2.2",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.2",
     "vite": "^5.1.4"
   }
 }
