--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
       "@babel/env",
       "@babel/preset-react",
       "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-nullish-coalescing-operator"
   ]
 }
