--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest  --config=jest.json",
-    "test:coverage": "jest --config=jest.json --coverage "
+    "test:update": "jest  --config=jest.json --updateSnapshot",
+    "test:coverage": "jest --config=jest.json --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -33,6 +34,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/register": "^7.23.7",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
